Strava AutoLiker extension
add English lang

--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,16 @@
         <button id="grabBtn">Запустить скрипт</button>
         <br><br>
         <button id="StopBtn">Остановить скрипт</button>
+        <br>
         <script src="popup.js"></script>
+        <br>
+        <button class="langbutton">
+            ENG
+            <img class="langpic" src="eng.png">
+        </button>
+        <button class="langbutton">
+            RUS
+            <img class="langpic" src="rus.png">
+        </button>
     </body>
 </html>
