--- a/popup.html
+++ b/popup.html
@@ -15,11 +15,11 @@
         <br>
         <button class="langbutton">
             ENG
-            <img class="langpic" src="eng.png">
+            <img class="langpic" src="resources/eng.png">
         </button>
         <button class="langbutton">
             RUS
-            <img class="langpic" src="rus.png">
+            <img class="langpic" src="resources/rus.png">
         </button>
     </body>
 </html>
