add language choose
add ENG and RUS language switch

--- a/popup.html
+++ b/popup.html
@@ -7,19 +7,20 @@
     </head>
     <body>
         <h1>Strava AutoLiker</h1>
-        <button id="grabBtn">Запустить скрипт</button>
+        <button id="grabBtn">Start script</button>
         <br><br>
-        <button id="StopBtn">Остановить скрипт</button>
+        <button id="StopBtn">Stop script</button>
         <br>
-        <script src="popup.js"></script>
         <br>
-        <button class="langbutton">
+        <p id="changeYourLangLabel1">Choose your language</p>
+        <button id="engLangButt" class="langbutton">
             ENG
             <img class="langpic" src="resources/eng.png">
         </button>
-        <button class="langbutton">
+        <button id="rusLangButt" class="langbutton">
             RUS
             <img class="langpic" src="resources/rus.png">
         </button>
+        <script src="popup.js"></script>
     </body>
 </html>
